<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterForm">

    <TextView
        android:id="@+id/tv_username"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:gravity="end"
        android:text="@string/username_txt"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/tv_password"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="80dp"
        android:gravity="end"
        android:text="@string/password_txt"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/tv_retype"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="120dp"
        android:gravity="end"
        android:text="@string/retype_txt"
        android:textSize="16sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edt_username"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_toRightOf="@+id/tv_username"
        tools:ignore="Autofill,LabelFor,RtlHardcoded,SpeakableTextPresentCheck,TextFields,TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/edt_password"
        android:layout_width="270dp"
        android:layout_height="48dp"
        android:layout_marginTop="60dp"
        android:layout_toRightOf="@+id/tv_password"
        android:inputType="textPassword"
        tools:ignore="Autofill,LabelFor,RtlHardcoded,SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/edt_retype"
        android:layout_width="270dp"
        android:layout_height="48dp"
        android:layout_marginTop="100dp"
        android:layout_toRightOf="@+id/tv_retype"
        android:inputType="textPassword"
        tools:ignore="Autofill,LabelFor,RtlHardcoded,SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/tv_birthday"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_retype"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:gravity="right"
        android:text="@string/birthdate_txt"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:ignore="RtlHardcoded,TextSizeCheck" />

    <LinearLayout
        android:id="@+id/layoutBirthday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_birthday"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp">

        <EditText
            android:id="@+id/edt_birthday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:hint="@string/choose_your_birthdate_txt"
            android:inputType="none"
            android:textAlignment="center"
            android:textSize="20sp"
            tools:ignore="Autofill,TextContrastCheck" />
        <!--<EditText
            android:id="@+id/edtBirthday"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtBirthday"
            android:minHeight="48dp"
            android:hint="choose your birthdate"
            android:textAlignment="center"
            android:clickable="false"
            android:inputType="none"/>-->

        <Button
            android:id="@+id/btn_select_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_birthday"
            android:layout_marginStart="20dp"
            android:text="@string/select_txt"
            android:textSize="18sp"
            tools:ignore="ObsoleteLayoutParam,VisualLintBounds" />
    </LinearLayout>


    <TextView
        android:id="@+id/tv_gender"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/layoutBirthday"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:gravity="right"
        android:text="@string/gender_txt"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:ignore="RtlHardcoded" />

    <RadioGroup
        android:id="@+id/rgGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_gender"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <RadioButton
            android:id="@+id/rb_male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:text="@string/male_txt" />

        <RadioButton
            android:id="@+id/rb_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:text="@string/female_txt" />
    </RadioGroup>

    <TextView
        android:id="@+id/tv_hobbies"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/rgGender"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:gravity="end"
        android:text="@string/hobbies_txt"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:ignore="TextSizeCheck" />

    <LinearLayout
        android:id="@+id/layoutHobbies"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_hobbies"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp">

        <CheckBox
            android:id="@+id/cb_tennis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tennis_txt" />

        <CheckBox
            android:id="@+id/cb_futbal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:text="@string/futbal_txt" />

        <CheckBox
            android:id="@+id/cb_others"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:text="@string/others_txt" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp">

        <Button
            android:id="@+id/btn_reset"
            android:layout_width="139dp"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/reset_txt"
            android:textSize="20sp"
            tools:ignore="ButtonStyle,TextContrastCheck" />

        <Button
            android:id="@+id/btn_sign_up"
            android:layout_width="139dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:padding="16dp"
            android:text="@string/sign_up_txt"
            android:textSize="20sp"
            tools:ignore="ButtonStyle" />
    </LinearLayout>


</RelativeLayout>